--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     Hear We Art
   </a>
 
-  <button id="nav-toggle" class="hamburger hamburger-cancel">
+  <button id="nav-toggle" class="hamburger hamburger-cancel float-right">
     <span class="icon"></span>
   </button>
 
