--- a/assets/css/_sass/_please-donate.scss
+++ b/assets/css/_sass/_please-donate.scss
@@ -1,6 +1,7 @@
 .please-donate {
   background-image: asset-url("img/donate-background.jpg");
   background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
   padding: 100px 30px;
 }
