--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -29,18 +29,18 @@
     position: relative;
     text-align: center;
     margin: 0;
-    top: 40vh;
+    top: 35vh;
   }
 
   h1 {
-    font-size: 100px;
+    font-size: 80px;
     color: white;
   }
 
   h2 {
     text-transform: none;
     color: white;
-    font-size: 50px;
+    font-size: 40px;
   }
 }
 
@@ -58,4 +58,22 @@
   color: white;
   min-height: 0;
   padding: 50px 0;
+}
+
+@media screen and (min-width: $sm-width) {
+  .home-section-1 {
+    h1 {
+      font-size: 100px;
+    }
+
+    h2 {
+      font-size: 50px;
+    }
+  }
+}
+
+@media screen and (max-width: $md-width) {
+  .rellax {
+    transform: translate3d(0, 0, 0) !important;
+  }
 }
