--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -19,7 +19,7 @@
 
     <li class="pure-menu-item {{ items_has_child }} {{ item_selected }}">
 
-      <a href="{{ item.route | relative_url }}" class="pure-menu-link">
+      <a href="{{ item.route | relative_url }}" class="pure-menu-link uppercase">
         {{ item.name }}
       </a>
 
