--- a/assets/css/_sass/_please-donate.scss
+++ b/assets/css/_sass/_please-donate.scss
@@ -2,7 +2,7 @@
   background-image: asset-url("img/donate-background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100vh;
+  min-height: 400px;
   padding: 100px 30px;
 }
 
