--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
 
-  <a class="menu-heading" href="{{ '/' | relative_url }}">
+  <a class="menu-heading uppercase" href="{{ '/' | relative_url }}">
     Hear We Art
   </a>
 
