--- a/assets/css/_sass/_general.scss
+++ b/assets/css/_sass/_general.scss
@@ -10,6 +10,7 @@ $heavy-margin: 50px;
 
 html {
   font-family: "Proxima-N-W01-Reg";
+  font-size: 17px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -19,7 +20,7 @@ h1, h2, h3, h4, h5, h6 {
 .content-container {
   margin: 0 auto;
   max-width: 850px;
-  padding: 10px 30px;
+  padding: 10px 5px;
 }
 
 .youtube {
@@ -124,6 +125,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (min-width: $sm-width) {
+  .content-container {
+    padding: 10px 20px;
+  }
+
   .float-left-sm {
     float: left;
   }
@@ -134,6 +139,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media screen and (min-width: $md-width) {
+  .content-container {
+    padding: 10px 30px;
+  }
+
   .float-left-md {
     float: left;
   }
