fixed issue with responsive menu on chrome

--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -1,4 +1,5 @@
 .site-header {
+  position: relative;
   height: 85px;
   border-top: 2px solid $dark-orange;
   border-bottom: 2px solid $dark-orange;
