implemented stateless-maybe-js in responsive menu animation check

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,72 +1,2 @@
-<script>
-(function (document) {
-    var navToggle = document.getElementById('nav-toggle'),
-
-        menu = document.getElementById('menu'),
-
-        menuOpened = false,
-
-        point = function (x, y) {
-            return { x: x, y: y };
-        },
-
-        touchEventToPoint = function (event) {
-            return point(event.touches[0].clientX, event.touches[0].clientY);
-        },
-
-        touchFrom = point(0, 0),
-
-        touchTo = point(0, 0),
-
-        handleTouchStart = function (event) {
-            touchFrom = touchEventToPoint(event);
-
-            menu.style.transition = 'transform 0.3s';
-        },
-
-        handleTouchMove = function (event) {
-            touchTo = touchEventToPoint(event);
-
-            var translation = touchFrom.x - touchTo.x;
-
-            menu.style.transform = 'translateX(-' + translation + 'px)';
-        },
-
-        handleTouchEnd = function (event) {
-            var swipeLength = Math.abs(touchFrom.x - touchTo.x);
-
-            if (swipeLength > 100) {
-                menu.style.transition = null;
-                closeMenu();
-            }
-
-            menu.style.transform = null;
-        },
-
-        openMenu = function () {
-            navToggle.classList.add('active');
-            menu.classList.add('opened');
-            menu.classList.remove('closed');
-            menuOpened = true;
-
-            document.addEventListener('touchstart', handleTouchStart, false);
-            document.addEventListener('touchmove', handleTouchMove, false);
-            document.addEventListener('touchend', handleTouchEnd, false);
-        },
-
-        closeMenu = function () {
-            navToggle.classList.remove('active');
-            menu.classList.add('closed');
-            menu.classList.remove('opened');
-            menuOpened = false;
-
-            document.removeEventListener('touchstart', handleTouchStart);
-            document.removeEventListener('touchmove', handleTouchMove);
-            document.removeEventListener('touchend', handleTouchEnd);
-        };
-
-    navToggle.addEventListener('click', function (event) {
-        menuOpened ? closeMenu() : openMenu();
-    });
-})(document);
-</script>
+<script src="{{ 'assets/stateless-maybe-js/dist/maybe.min.js' | relative_url }}"></script>
+<script src="{{ 'assets/js/main.js' | relative_url }}"></script>
