--- a/assets/css/_sass/_general.scss
+++ b/assets/css/_sass/_general.scss
@@ -17,6 +17,11 @@ h1, h2, h3, h4, h5, h6 {
   color: $medium-orange
 }
 
+.scroll-lock {
+  overflow: hidden;
+  height: 100%;
+}
+
 .content-container {
   margin: 0 auto;
   max-width: 850px;
