--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -27,7 +27,10 @@
   background: #eee;
   z-index: 10;
   text-align: center;
-  overflow: scroll;
+
+  @media screen and (max-height: 400px) {
+    overflow: scroll;
+  }
 }
 
 #menu.opened {
