--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,10 +11,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, shrink-to-fit=no">
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="{{ 'assets/purecss/build/base-min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ 'assets/purecss/build/menus-min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ 'assets/purecss/build/grids-min.css' | relative_url }}">
-  <link rel="stylesheet" href="{{ 'assets/purecss/build/grids-responsive-min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'node-assets/purecss/build/base-min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'node-assets/purecss/build/menus-min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'node-assets/purecss/build/grids-min.css' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'node-assets/purecss/build/grids-responsive-min.css' | relative_url }}">
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tajawal">
 
   <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
 
