--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -19,9 +19,15 @@
 
     <li class="pure-menu-item {{ items_has_child }} {{ item_selected }}">
 
-      <a href="{{ item.route | relative_url }}" class="pure-menu-link uppercase">
-        {{ item.name }}
-      </a>
+      {% if item.route %}
+        <a href="{{ item.route | relative_url }}" class="pure-menu-link uppercase">
+          {{ item.name }}
+        </a>
+      {% else %}
+        <span class="pure-menu-link uppercase">
+          {{ item.name }}
+        </span>
+      {% endif %}
 
       {% if item.childs %}
         {% assign menu_items = item.childs %}
