--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -115,8 +115,12 @@
   background: initial;
 }
 
-.pure-menu-allow-hover:hover > .pure-menu-children {
-  position: static;
+.pure-menu-allow-hover:hover,
+.pure-menu-allow-hover:focus,
+.pure-menu-allow-hover:active {
+  .pure-menu-children {
+    position: static;
+  }
 }
 
 #nav-toggle {
@@ -211,9 +215,16 @@
     margin: 0 0 0 -30px;
   }
 
-  .pure-menu-allow-hover:hover > .pure-menu-children {
-    position: absolute;
-    display: block;
+  .pure-menu-allow-hover:hover,
+  .pure-menu-allow-hover:focus,
+  .pure-menu-allow-hover:active {
+    cursor: pointer;
+    outline: none;
+
+    .pure-menu-children {
+      position: absolute;
+      display: block;
+    }
   }
 }
 
