--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,4 +25,4 @@ $assets-path: "{{ 'assets' | relative_url }}";
   "_sass/_gallery.scss",
   "_sass/_home.scss",
   "_sass/_contact-us.scss",
-  "_sass/_please-donate.scss";
+  "_sass/_donate.scss";
