--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <a class="menu-heading uppercase" href="{{ '/' | relative_url }}">
-    Hear We Art
+    Hear We Art <i class="fas fa-home show-on-lg"></i>
   </a>
 
   <button id="nav-toggle" class="hamburger hamburger-cancel float-right">
