--- a/assets/css/_sass/_header.scss
+++ b/assets/css/_sass/_header.scss
@@ -1,11 +1,14 @@
+$header-border: 2px;
+
 .site-header {
   position: relative;
-  height: 85px;
-  border-top: 2px solid $dark-orange;
-  border-bottom: 2px solid $dark-orange;
+  height: $header-height;
+  border-top: $header-border solid $dark-orange;
+  border-bottom: $header-border solid $dark-orange;
   transform: translate3d(0, 0, 0);
   z-index: 10;
   background: white;
+  font-size: 16px;
 }
 
 .menu-heading {
@@ -21,7 +24,6 @@
   transform: translateX(-101%);
   position: absolute;
   height: 100vh;
-  font-size: 16px;
   top: 0;
   left: 0;
   background: #eee;
@@ -147,8 +149,6 @@
 }
 
 @media screen and (min-width: $lg-width) {
-  $lg-header-height: 65px;
-
   .site-header {
     position: fixed;
     width: 100vw;
@@ -159,7 +159,18 @@
 
   .header-placeholder {
     display: block;
-    height: $lg-header-height + 4px; // for borders
+    height: $lg-header-height + ($header-border * 2);
+  }
+
+  .menu-heading {
+    font-size: 18px;
+
+    .fa-home {
+      font-size: 14px;
+      position: relative;
+      bottom: 1px;
+      left: 3px;
+    }
   }
 
   #menu {
@@ -219,7 +230,6 @@
   .pure-menu-allow-hover:focus,
   .pure-menu-allow-hover:active {
     cursor: pointer;
-    outline: none;
 
     .pure-menu-children {
       position: absolute;
