--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -1,21 +1,9 @@
 .home-section {
   transform: translate3d(0, 0, 0);
-  min-height: 600px;
+  min-height: 473px;
   background: white;
   position: relative;
   z-index: 2;
-
-  blockquote {
-    font-style: italic;
-  }
-
-  blockquote:before {
-    content: "“";
-  }
-
-  blockquote:after {
-    content: "”";
-  }
 }
 
 .home-section-main {
@@ -26,20 +14,16 @@
 
   h1, h2 {
     position: relative;
-    text-align: center;
-    margin: 0;
-    top: 35vh;
+    color: white;
+    top: 230px;
   }
 
   h1 {
-    font-size: 80px;
-    color: white;
+    font-size: 40px;
   }
 
   h2 {
-    text-transform: none;
-    color: white;
-    font-size: 40px;
+    font-size: 25px;
   }
 }
 
@@ -51,16 +35,17 @@
 }
 
 .home-section-quote {
-  border-top: 10px solid white;
   border-bottom: 100px solid white;
   background: $medium-orange;
   color: white;
-  min-height: 0;
-  padding: 50px 0;
 }
 
-@media screen and (min-width: $sm-width) {
-  .home-section-1 {
+@media screen and (min-width: $md-width) {
+  .home-section-main {
+    h1, h2 {
+      top: 35vh;
+    }
+
     h1 {
       font-size: 100px;
     }
