Handling mouseenter/mouseleave events on submenus

--- a/_includes/menu-items.html
+++ b/_includes/menu-items.html
@@ -19,11 +19,7 @@
       {% assign item_selected = 'pure-menu-selected' %}
     {% endif %}
 
-    <li
-      class="pure-menu-item {{ item_has_child }} {{ item_selected }}"
-      {% if item.childs  %}
-        tabindex="{% increment tab_index %}"
-      {% endif %}>
+    <li class="pure-menu-item {{ item_has_child }} {{ item_selected }}">
 
       {% if item.route %}
         <a
