--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 
   <title>
     {% if page.title %}
-      {{ site.title }} | {{ page.title }}
+      {{ page.title }} | {{ site.title }}
     {% else %}
       {{ site.title }}
     {% endif %}
